<resources>
    <string name="app_name">Football Quiz</string>
    <string name="_20">/20</string>
    <string name="_0">0</string>

    <!--<string name="banner_ad_unit_id">ca-app-pub-6229589484617184/7066256795</string> **nas baner -->
    <string name="test_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="double_up_hint">Watch ad to double up hints?</string>
    <string name="levels">Levels</string>
    <string name="next">Next</string>
    <string name="retry">Retry</string>
    <string name="previous">Previous</string>
    <string name="results">Results</string>
    <string name="correct_answers">New correct answers</string>
    <string name="players">Players</string>
    <string name="logos">Logos</string>
    <string name="questions">Questions</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="hints">Hints:</string>
    <string name="logo_picture">logo</string>
    <string name="hints_description">hints_image_description</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="level_description">Answer 15/20 correct to unlock new level</string>
    <string name="level_description2">Answer 10/20 correct to unlock new level</string>
    <string name="amateur">Amateur</string>
    <string name="semipro">Semi-Pro</string>
    <string name="professional">Professional</string>
    <string name="worldclass">World Class</string>
    <string name="legendary">Legendary</string>
    <string name="level1">Level1</string>
    <string name="level2">Level2</string>
    <string name="level3">Level3</string>
    <string name="level4">Level4</string>
    <string name="level5">Level5</string>
    <string name="level6">Level6</string>
    <string name="level7">Level7</string>
    <string name="level8">Level8</string>
    <string name="level9">Level9</string>
    <string name="level10">Level10</string>
    <string name="level11">Level11</string>
    <string name="level12">Level12</string>
    <string name="level13">Level13</string>
    <string name="level14">Level14</string>
    <string name="level15">Level15</string>
    <string name="level16">Level16</string>
    <string name="level17">Level17</string>
    <string name="level18">Level18</string>
    <string name="level19">Level19</string>
    <string name="level20">Level20</string>
    <string name="level21">Level21</string>
    <string name="level22">Level22</string>
    <string name="level23">Level23</string>
    <string name="level24">Level24</string>
    <string name="level25">Level25</string>
    <string name="score">Score</string>
    <string name="adsbutton">adsbutton</string>
    <string name="hint_1">+1 Hint</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="watch_ad">Watch ad</string>
    <string name="watch_ad_15">Watch ad and get +15 hints</string>
    <string name="watch_ad_10">Watch ad and get +10 hints</string>
    <string name="watch_ad_5">Watch ad and get +5 hints</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="reset_app">Reset App</string>
    <string name="version">Version: 1.0.0</string>
    <string name="splash_screen">Splash screen</string>
    <string name="image_description">Image</string>
    <string name="number_500">/500</string>
    <string name="number_1500">/1500</string>
    <string name="stats_all">All</string>
    <string name="players_hint">players_hint</string>
    <string name="soundon">Sound: ON</string>
    <string name="soundoff">Sound: OFF</string>
    <string name="togglebutton">toggle button</string>
    <string name="credits">Pictures of logos downloaded from fmscout.com</string>


</resources>
