<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/statsbackground"
    android:gravity="center">


    <TextView
        android:id="@+id/textView56"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/version"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="203dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resett"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/reset_app"
        android:textSize="14sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView56"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/textView56"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView56" />

    <ToggleButton
        android:id="@+id/toggleButtonSound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/toggle_selector"
        android:checked="true"
        android:text="@string/togglebutton"
        android:textOff="@string/soundoff"
        android:textOn="@string/soundon"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/resett"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/resett"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/resett" />

    <TextView
        android:id="@+id/textView73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtonSound"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>