<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startbackground"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/football_quiz2"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout12" />


    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:contentDescription=""
            android:onClick="onclickplayers"
            android:text="@string/players"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round"
            tools:ignore="ContentDescription"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:onClick="onclicklogos"
            android:text="@string/logos"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout3"
            app:layout_constraintRight_toRightOf="@+id/linearLayout3"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:onClick="onclickquestions"
            android:text="@string/questions"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout2"
            app:layout_constraintRight_toRightOf="@+id/linearLayout2"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:onClick="onclickstatistics"
            android:text="@string/statistics"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout4"
            app:layout_constraintRight_toRightOf="@+id/linearLayout4"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:onClick="onclicksettings"
            android:text="@string/settings"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout5"
            app:layout_constraintRight_toRightOf="@+id/linearLayout5"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button

            android:id="@+id/exitbtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="27dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/exit"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
            app:layout_constraintRight_toRightOf="@+id/linearLayout"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="157dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="157dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82" />


</android.support.constraint.ConstraintLayout>
